chore: fix modal image picker and uploader alignment

--- a/src/sass/components/uploader-image.scss
+++ b/src/sass/components/uploader-image.scss
@@ -5,7 +5,8 @@
   background: #f8f8f8;
   //padding: 5%;
   height: 100%;
-  margin: 2%;
+  overflow: auto;
+  text-align: center;
   .upload-image-widget--empty-state {
     position: relative;
     top: 50%;
